Issue cover image aligning (on issue page)

--- a/less/objects/issue_toc.less
+++ b/less/objects/issue_toc.less
@@ -33,6 +33,7 @@
 	}
 	.issue_cover_block {
 		width: 50%;
+		text-align: right;
 	}
 }
 
